--- a/Faculty Profiles.html
+++ b/Faculty Profiles.html
@@ -140,7 +140,7 @@
         </nav>
     </header>
     <main>
-        <h1>Faculty Profiles</h1><fieldset><table style="border-collapse: collapse;">
+        <h1>Faculty Profiles</h1><table style="border-collapse: collapse;">
         <tbody>
             <tr>
                 <td style="border: 2px solid black; padding: 2px; text-align: center;"><strong>Name</strong></td>
@@ -166,7 +166,7 @@
                 <td style="border: 1px solid black; padding: 2px;">Mrs. Priyanka Diwan Goyal</td>
                 <td style="border: 1px solid black; padding: 2px;">Assistant Professor (Guest Faculty)</td>
                 <td style="border: 1px solid black; padding: 2px;">M.Tech(CSE), B.Tech(CSE)</td>
-        </tbody></table></fieldset>
+        </tbody></table>
     </main>
 
 </body>
